adk-ui-deployment/adk-ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adk-ui
  namespace: agentgateway-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adk-ui
  template:
    metadata:
      labels:
        app: adk-ui
    spec:
      serviceAccountName: adk-ui-sa
      containers:
      - name: adk-ui
        image: kamalberrybytes/adk-web-ui:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: adk-ui-service
  namespace: agentgateway-system
  labels:
    app: adk-ui
spec:
  #type: NodePort
  selector:
    app: adk-ui
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
        #   nodePort: 30441
